--- a/codelap_movie_main.html
+++ b/codelap_movie_main.html
@@ -390,7 +390,7 @@
             width: 450px;
         }
         .u1 {
-            visibility: hidden;
+            visibility: visible;
         }
         .media-1 {
             width: 500px;
@@ -459,7 +459,7 @@
                     //
                     //     }
                 }else{
-                    alert("잘못입력하셨습니다.");
+                    //alert("잘못입력하셨습니다.");
                 }
 
 
@@ -469,7 +469,7 @@
                  e.preventDefault();
                  let num2 = 1;
                   let imgIndex = $(this).val();
-                  alert("다음 확인::" + imgIndex);
+                  //alert("다음 확인::" + imgIndex);
 
                 //
                 // $(document).ready(function(){
@@ -493,7 +493,7 @@
                             $("#next").attr("src", "images/kor_+'num[i]'+.jpg");
                         }
                 }else {
-                alert("입력 오루입니디.");
+                //alert("입력 오루입니디.");
             }
          });
 
