JHLee commit complete

--- a/codelap-movie-korea.html
+++ b/codelap-movie-korea.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <script src="js/jquery.js"></script>
 </head>
     <style>
         header{
@@ -54,6 +54,24 @@
     </style>
 
 <body>
+<script>
+    $(document).ready(function(){
+        // 동영상 요소에 마우스 호버 이벤트 추가
+        $("#myVideo").hover(
+            function(){
+                // 호버 시 실행할 코드
+                var videoUrl = $(this).find("source").attr("src");
+                $("#url").text(videoUrl);
+                $("#video-info").fadeIn();
+            },
+            function(){
+                // 호버가 끝날 때 실행할 코드
+                $("#url").text("");
+                $("#video-info").fadeOut();
+            }
+        );
+    });
+</script>
     <header>
         <h1>코드랩 무비</h1>
     </header>
@@ -74,15 +92,15 @@
     <section>
         <ul>
             <h3 id="korea">한국영화</h3>
-            <a href="https://www.youtube.com/embed/8DtrRadXsjI"><img src = "images/kor_1.jpg"></a>
-            <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_2.jpg"></a>
-            <a href="https://www.youtube.com/embed/rvcN5uFf_VI"><img src = "images/kor_3.jpg"></a>
-            <a href="https://www.youtube.com/embed/E-LkaQgj0qM"><img src = "images/kor_4.jpg"></a>
-            <a href="https://www.youtube.com/embed/PG7ftMRWO9c"><img src = "images/kor_5.jpg"></a>
-            <a href="https://www.youtube.com/embed/3PWIFA-ulP0"><img src = "images/kor_6.jpg"></a>
-            <a href="https://www.youtube.com/embed/DYE2aDl2RhI"><img src = "images/kor_7.jpg"></a>
-            <a href="https://www.youtube.com/embed/JfGpTWM-TNk"><img src = "images/kor_8.jpg"></a>
-            <a href="https://www.youtube.com/embed/bETrnbq_OLM"><img src = "images/kor_9.jpg"></a>
+            <a href="https://www.youtube.com/embed/8DtrRadXsjI"><img src = "images/kor_1.jpg" id="hover"></a>
+            <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_2.jpg" id="hover"></a>
+            <a href="https://www.youtube.com/embed/rvcN5uFf_VI"><img src = "images/kor_3.jpg" id="hover"></a>
+            <a href="https://www.youtube.com/embed/E-LkaQgj0qM"><img src = "images/kor_4.jpg" id="hover"></a>
+            <a href="https://www.youtube.com/embed/PG7ftMRWO9c"><img src = "images/kor_5.jpg" id="hover"></a>
+            <a href="https://www.youtube.com/embed/3PWIFA-ulP0"><img src = "images/kor_6.jpg" id="hover"></a>
+            <a href="https://www.youtube.com/embed/DYE2aDl2RhI"><img src = "images/kor_7.jpg" id="hover"></a>
+            <a href="https://www.youtube.com/embed/JfGpTWM-TNk"><img src = "images/kor_8.jpg" id="hover"></a>
+            <a href="https://www.youtube.com/embed/bETrnbq_OLM"><img src = "images/kor_9.jpg" id="hover"></a>
         </ul>
 
         <ul>
