JHLee commit complete

--- a/codelap-movie-kor-movie.html
+++ b/codelap-movie-kor-movie.html
@@ -567,9 +567,9 @@
 
             <div>
                 <div id="movieTextArea" style="text-align: left">
-                    <h2></h2>
-                    <h4></h4>
-                    <h5></h5>
+                    <h2 style="color: green"></h2><br>
+                    <h4></h4><br>
+                    <h5 style="padding-right: 200px; text-align: justify"></h5>
                 </div>
 
                 <div style="border-bottom:0; ">
