js commit complete home

--- a/codelap-movie-jspagematest.html
+++ b/codelap-movie-jspagematest.html
@@ -37,7 +37,8 @@
 
                     "<iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>" +
                     // "<iframe style='display:none' width='100' height='100%' src='https://www.youtube.com/embed/64aNeYsa6Iw?autoplay=1&mute=1' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='0'></iframe>" +
-                    "<h4>" + movieArray[i][3] + "</h4></div>");
+                    "<h4>" + " 제목 :" + movieArray[i][2] + "</h4>" +
+                    "<h5>" + "출연진 :" + movieArray[i][3] + "</h5></div>");
             }
         })
 
@@ -192,7 +193,7 @@
 <!--            class gallery-item 시작입니다.-->
             <div class='gallery-item'>
                 <img src="images/kor_1.jpg" alt='kor_1' id="1">
-                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>" +
+                <iframe style='display:none' width='100%' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;' allowfullscreen='1'></iframe>
                 <h4> 제목 : 괴물 </h4>
                 <h2> 출연진 : 송강호 등등</h2>
             </div>
@@ -229,7 +230,7 @@
             <div class="col">
                 <div class="card shadow-sm">
                     <!--                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: صورة مصغرة" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">صورة مصغرة</text></svg>-->
-                    <img src="images/kor_1.jpg" alt="영화" style="width:100%; height:225px;">
+                    <img src="images/kor_2.jpg" alt="영화" style="width:100%; height:225px;">
                     <div class="card-body" style="height: 150px; position:relative;">
                         <p class="card-text" >괴물 </p>
                         <div class="d-flex justify-content-between align-items-center" style="position: absolute;  bottom:10px;">
@@ -245,7 +246,7 @@
             <div class="col">
                 <div class="card shadow-sm">
                     <!--                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: صورة مصغرة" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">صورة مصغرة</text></svg>-->
-                    <img src="images/kor_1.jpg" alt="영화" style="width:100%; height:225px;">
+                    <img src="images/kor_3.jpg" alt="영화" style="width:100%; height:225px;">
                     <div class="card-body" style="height: 150px; position:relative;">
                         <p class="card-text" >괴물 </p>
                         <div class="d-flex justify-content-between align-items-center" style="position: absolute;  bottom:10px;">
@@ -261,7 +262,7 @@
             <div class="col">
                 <div class="card shadow-sm">
                     <!--                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: صورة مصغرة" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">صورة مصغرة</text></svg>-->
-                    <img src="images/kor_1.jpg" alt="영화" style="width:100%; height:225px;">
+                    <img src="images/kor_4.jpg" alt="영화" style="width:100%; height:225px;">
                     <div class="card-body" style="height: 150px; position:relative;">
                         <p class="card-text" >괴물 </p>
                         <div class="d-flex justify-content-between align-items-center" style="position: absolute;  bottom:10px;">
@@ -277,7 +278,7 @@
             <div class="col">
                 <div class="card shadow-sm">
                     <!--                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: صورة مصغرة" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">صورة مصغرة</text></svg>-->
-                    <img src="images/kor_1.jpg" alt="영화" style="width:100%; height:225px;">
+                    <img src="images/kor_5.jpg" alt="영화" style="width:100%; height:225px;">
                     <div class="card-body" style="height: 150px; position:relative;">
                         <p class="card-text" >괴물 </p>
                         <div class="d-flex justify-content-between align-items-center" style="position: absolute;  bottom:10px;">
