--- a/codelap-movie-kor-movie.html
+++ b/codelap-movie-kor-movie.html
@@ -14,7 +14,7 @@
 
             [1, "images/kor_1.jpg", "괴물", "송강호, 박해일, 배두나, 고아성 등", "아버지(변희봉)가 운영하는 한강매점, 늘어지게 낮잠 자던 강두(송강호)는 우연히 특이한 광경을 목격하게 된다. 생전 보도 못 한 무언가가 한강다리에 매달려 움직이는 것이다. 정체를 알 수 없는 괴물은 둔치 위로 올라와 사람들을 거침없이 깔아뭉개고, 무차별로 물어뜯기 시작한다. 순식간에 아수라장으로 돌변하는 한강변. 강두도 뒤늦게 딸 현서(고아성)를 데리고 정신없이 도망가지만, 꼭 잡았던 현서의 손을 놓치고 만다. 하루아침에 집과 생계, 그리고 현서까지 모든 것을 잃게 된 강두 가족. 돈도 없고 빽도 없는 그들은 위험 구역으로 선포된 한강 어딘가에 있을 현서를 찾아 나선다.", "https://www.youtube.com/embed/8DtrRadXsjI?autoplay=1&mute=1", "hor", 100],
             [2, "images/kor_2.jpg", "도둑들", "김혜수, 이정재, 전지현 등 ",  "팀으로 활동 중인 한국의 도둑 뽀빠이와 예니콜, 씹던껌, 잠파노. 미술관을 터는데 멋지게 성공한 이들은 뽀빠이의 과거 파트너였던 마카오박이 제안한 홍콩에서의 새로운 계획을 듣게 된다. 여기에 마카오박이 초대하지 않은 손님, 감옥에서 막 출소한 금고털이 팹시가 합류하고 5명은 각자 인생 최고의 반전을 꿈꾸며 홍콩으로 향한다. 홍콩에서 한국 도둑들을 기다리고 있는 4인조 중국도둑 첸, 앤드류, 쥴리, 조니. 최고의 전문가들이 세팅된 가운데 서로에 대한 경계를 늦추지 않는 한국과 중국의 도둑들. 팽팽히 흐르는 긴장감 속에 나타난 마카오박은 자신이 계획한 목표물을 밝힌다. 그것은 마카오 카지노에 숨겨진 희대의 다이아몬드 (태양의 눈물). 성공을 장담할 수 없는 위험천만한 계획이지만 2천만 달러의 달콤한 제안을 거부할 수 없는 이들은 태양의 눈물을 훔치기 위한 작업에 착수한다. 그러나 진짜 의도를 알 수 없는 비밀스런 마카오박과 그런 마카오박의 뒤통수를 노리는 뽀빠이, 마카오박에게 배신당한 과거의 기억을 잊지 못하는 팹시와 팀보다 눈 앞의 현찰을 먼저 챙기는 예니콜, 그리고 한국 도둑들을 믿지 않는 첸과 중국 도둑들까지. 훔치기 위해 모였지만 목적은 서로 다른 10인의 도둑들은 서서히 자신만의 플랜을 세우기 시작하는데...", "https://www.youtube.com/embed/DG7R5FMwoAM?autoplay=1&mute=1", "act", 100],
-            [3, "images/kor_3.jpg", "7번방의 선물", "류승룡, 박신혜, 갈소원 등", "최악의 흉악범들이 모인 교도소 7번방에 이상한 놈이 들어왔다! 그는 바로 6살 지능의 딸바보 '용구'! 평생 죄만 짓고 살아온 7번방 패밀리들에게 떨어진 미션은 바로 '용구' 딸 '예승'이를 외부인 절대 출입금지인 교도소에 반.입.하.는.것! 2013년 새해, 웃음과 감동 가득한 사상초유의 합동작전이 시작된다!", "https://www.youtube.com/embed/rvcN5uFf_VI", "rom", 100],
+            [3, "images/kor_3.jpg", "7번방의 선물", "류승룡, 박신혜, 갈소원 등", "최악의 흉악범들이 모인 교도소 7번방에 이상한 놈이 들어왔다! 그는 바로 6살 지능의 딸바보 '용구'! 평생 죄만 짓고 살아온 7번방 패밀리들에게 떨어진 미션은 바로 '용구' 딸 '예승'이를 외부인 절대 출입금지인 교도소에 반.입.하.는.것! 2013년 새해, 웃음과 감동 가득한 사상초유의 합동작전이 시작된다!", "https://www.youtube.com/embed/rvcN5uFf_VI?autoplay=1&mute=1", "rom", 100],
             [4, "images/kor_4.jpg", "광해", "이병헌, 류승룡, 한효주 등", "왕위를 둘러싼 권력 다툼과 붕당정치로 혼란이 극에 달한 광해군 8년. 자신의 목숨을 노리는 자들에 대한 분노와 두려움으로 점점 난폭해져 가던 왕 ‘광해’는 도승지 ‘허균’에게 자신을 대신하여 위협에 노출될 대역을 찾을 것을 지시한다. 이에 허균은 기방의 취객들 사이에 걸쭉한 만담으로 인기를 끌던 하선을 발견한다. 왕과 똑같은 외모는 물론 타고난 재주와 말솜씨로 왕의 흉내도 완벽하게 내는 하선. 영문도 모른 채 궁에 끌려간 하선은 광해군이 자리를 비운 하룻밤 가슴 조이며 왕의 대역을 하게 된다. 왕이 되어선 안 되는 남자, 조선의 왕이 되다! 그러던 어느 날 광해군이 갑자기 의식을 잃고 쓰러지는 엄청난 사건이 발생하고, 허균은 광해군이 치료를 받는 동안 하선에게 광해군을 대신하여 왕의 대역을 할 것을 명한다. 저잣거리의 한낱 만담꾼에서 하루아침에 조선의 왕이 되어버린 천민 하선. 허균의 지시 하에 말투부터 걸음걸이, 국정을 다스리는 법까지, 함부로 입을 놀려서도 들켜서도 안 되는 위험천만한 왕노릇을 시작한다. 하지만 예민하고 난폭했던 광해와는 달리 따뜻함과 인간미가 느껴지는 달라진 왕의 모습에 궁정이 조금씩 술렁이고, 점점 왕의 대역이 아닌 자신의 목소리를 내기 시작하는 하선의 모습에 허균도 당황하기 시작하는데...", "https://www.youtube.com/embed/E-LkaQgj0qM?autoplay=1&mute=1", "act", 100],
             [5, "images/kor_5.jpg", "국가대표", "하정우, 성동일, 김지석 등", "1996년 전라북도 무주, 동계올림픽 유치를 위해 정식 종목 중 하나인 스키점프 국가대표팀이 급조된다. 이에 전(前) 어린이 스키교실 강사 방종삼(성동일 분)이 국가대표 코치로 임명되고, 그의 온갖 감언이설에 정예(?) 멤버들이 모인다. 전(前) 주니어 알파인 스키 미국 국가대표였다가 친엄마를 찾아 한국에 온 입양인 밥(하정우 분), 여자 없으면 하루도 못 버틸 나이트 클럽 웨이터 흥철(김동욱 분), 밤낮으로 숯불만 피우며 아버지가 시키는 대로 살아온 고깃집 아들 재복(최재환 분), 할머니와 동생을 돌봐야 하는 짐이 버거운 말 없는 소년 가장 칠구(김지석 분), 그런 형을 끔찍이 사랑하는 4차원 동생 봉구(이재응 분)까지! 방 코치는 마치 신이라도 된 것처럼 엄마와 같이 살 집이 필요한 밥에게는 아파트를, 사랑 때문에 또는 부양 가족 때문에 그들과 함께 있어야 하는 흥철, 칠구-봉구 형제, 그리고 재복에게는 군 면제를 약속한다. 단, 금메달 따면! 스키점프가 뭔지도 모르지만 한때 스키 좀 타봤다는 이유로 뽑힌 이들이 모이면서 대한민국 최초 스키점프 국가대표팀이 결성된다. 그러나 스키점프(Ski Jump)의 스펠링도 모르는 코치와 경험 전무한 국가대표 선수들의 훈련은 험난 하기만하다. 변변한 연습장도 없이 점프대 공사장을 전전해야 했고 제대로 된 보호장구나 점프복도 없이 오토바이 헬멧, 공사장 안전모 등만을 쓰고 맨몸으로 훈련에 임해야 했다. 그럼에도 불구하고 재복이네 고깃집 앞 마당에서의 지상 훈련을 시작으로 나무 꼭대기에 줄로 매다는 공중 곡예(?), 시속 90km의 승합차 위에 스키 점프 자세로 고정되어 달리는 위험천만한 질주, 폐(閉)놀이공원 후룸 라이드를 점프대로 개조해 목숨 걸고 뛰어내리기 등 과학적(?) 훈련으로 무장하는 선수들! 이런 식의 무대뽀 트레이닝에도 이들은 점점 선수다운 모습을 갖춰 가고, 스키 하나에 의지해 하늘을 날아가는 순간이 행복해진다. 드디어 우여곡절 끝에 오버스트도르프 월드컵에 참여한 대한민국 스키점프 국가대표팀. 외국선수들의 비웃음과 무시에도 굴하지 않고 그들은 최선을 다하지만, 뜻하지 않은 사건으로 인해 결국 좋은 결과를 거두지 못한다. 그래도 소 뒷걸음질 치다 개구리 잡은 격으로 엉겁결에 나가노 동계 올림픽 출전 자격을 얻게 된 대한민국 국가대표팀은 나름 금의환향하며 올림픽 진출의 꿈에 부푼다. 그러나 한국은 동계올림픽 개최지 선정에 끝내 탈락하게 되고, 스키점프 국가대표팀은 해체 위기에 처한다. 군 면제를 위해, 엄마를 찾기 위해, 이제 이러한 개인적인 명분들을 뛰어 넘어 스키점프에 대한 애정과 열정, 그리고 도전 정신만으로 경기에 출전할 수 있기를 고대하는데.. 2003년 제21회 타르비시오 동계 유니버시아드 개인전, 단체전 금메달 / 2003년 제5회 아오모리 동계 아시안게임 단체전 금메달 / 2007년 제23회 토리노 동계 유니버시아드 개인전, 단체전 은메달 / 2009년 제24회 동계 유니버시아드 개인전, 단체전 금메달. 아직 한국 스키점프 국가대표의 등록 선수는 다섯 명이 전부이다.", "https://www.youtube.com/embed/PG7ftMRWO9c?autoplay=1&mute=1", "act", 100],
             [6, "images/kor_6.jpg", "실미도", "설경구, 안성기, 허준호 등", "영화 (실미도)는 1968년 창설된 ‘실미도 684부대’에 관한 영화이며, 영화 속 훈련병들의 출신 성분이나 상황 설정이 과거 혹은 현재의 북파공작부대나 북파공작원과는 무관함을 알려드립니다. 북으로 간 아버지 때문에 연좌제에 걸려 사회 어느 곳에서도 인간대접 받을 수 없었던 강인찬(설경구 분) 역시 어두운 과거와 함께 뒷골목을 전전하다가 살인미수로 수감된다. 그런 그 앞에 한 군인이 접근, '나라를 위해 칼을 잡을 수 있겠냐'는 엉뚱한 제안을 던지곤 그저 살인미수일 뿐인 그에게 사형을 언도하는데... 누군가에게 이끌려 사형장으로 향하던 인찬, 그러나 그가 도착한 곳은 인천 외딴 부둣가, 그곳엔 인찬 말고도 상필(정재영 분), 찬석(강성진 분), 원희(임원희 분), 근재(강신일 분) 등 시꺼먼 사내들이 잔뜩 모여 있었고 그렇게 1968년 대한민국 서부 외딴 섬 '실미도'에 기관원에 의해 강제차출된 31명이 모인다. 영문 모르고 머리를 깎고 군인이 된 31명의 훈련병들, 그들에게 나타난 의문의 군인은 바로 김재현 준위(안성기 분), 어리둥절한 그들에게 \"주석궁에 침투, 김일성 목을 따 오는 것이 너희들의 임무다\"는 한 마디를 시작으로 냉철한 조중사(허준호 분)의 인솔하에 31명 훈련병에 대한 혹독한 지옥훈련이 시작된다. '684 주석궁폭파부대'라 불리는 계급도 소속도 없는 훈련병과 그들의 감시와 훈련을 맡은 기간병들... \"낙오자는 죽인다, 체포되면 자폭하라!\"는 구호하에 실미도엔 인간은 없고 '김일성 모가지 따기'라는 분명한 목적만이 존재해간다. 조국의 부름에 목숨을 걸고 응답한 청년 기간병들과 분단 조국이 내몰았던 사지의 땅에서 자기 자리를 찾기 위해 울부짖으며 죽어간 서른 한 명 훈련병들의 영혼 앞에 이 영화를 바칩니다", "https://www.youtube.com/embed/3PWIFA-ulP0?autoplay=1&mute=1", "act", 100],
@@ -194,7 +194,7 @@
 
 
 <!--갤러리 박스 입니다. class galley-item을 포함한 자식을 추가해 주세요 -->
-    <div class="gallery-container">
+    <div class="gallery-container" style="padding-left: 250px">
         <div class="gallery">
 
 <!--            class gallery-item 시작입니다.-->
@@ -562,14 +562,14 @@
         <span class="close" id="closeModalBtn">&times;</span>
         <div style="width:100%; text-align:center; height: 700px; background: white;">
             <div style="width: 30%; height: 100%; float: left; ">
-                <img id="movieImageTag" style="width: 500px; height: 100%" src="" alt="코리아">
+                <img id="movieImageTag" style="width: 500px; height: 100%; margin-left: 300px" src="" alt="코리아">
             </div>
 
             <div>
-                <div id="movieTextArea" style="text-align: left">
+                <div id="movieTextArea" style="text-align: left; margin-left: 900px">
                     <h2 style="color: green"></h2><br>
                     <h4></h4><br>
-                    <h5 style="padding-right: 200px; text-align: justify"></h5>
+                    <h5 style="margin-right: 300px; text-align: justify"></h5>
                 </div>
 
                 <div style="border-bottom:0; ">
