--- a/codelap-movie-main-ver1.html
+++ b/codelap-movie-main-ver1.html
@@ -572,6 +572,8 @@
             document.getElementById('movieTextArea').querySelector('h2').textContent = "제목  : " + movieArray[parseInt(indexMA)-1][2];
             document.getElementById('movieTextArea').querySelector('h4').textContent = "출연진  : " + movieArray[parseInt(indexMA)-1][3];
             document.getElementById('movieTextArea').querySelector('h5').textContent = "줄거리  : " + movieArray[parseInt(indexMA)-1][4];
+
+            // $(".gallery").empty();
         }
 
         document.getElementById('closeModalBtn').addEventListener('click', function() {
